funcionalidad medio completa

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -14,5 +14,6 @@
             <h2><a href="">{{post.title}}</a></h2>
             <p>DjangoGirls</p>
         </article>
+        {%endfor%}
     </body>
 </html>
